automatic build of the core library - git generated version support